src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON var_declarations BEGIN statements END DOT
Rule 2     var_declarations -> VAR var_list
Rule 3     var_declarations -> <empty>
Rule 4     var_list -> var_list var_declaration
Rule 5     var_list -> var_declaration
Rule 6     var_declaration -> id_list COLON type SEMICOLON
Rule 7     id_list -> id_list COMMA ID
Rule 8     id_list -> ID
Rule 9     type -> INTEGER
Rule 10    type -> BOOLEAN
Rule 11    statements -> statements statement SEMICOLON
Rule 12    statements -> statement SEMICOLON
Rule 13    statements -> statements statement
Rule 14    statements -> statement
Rule 15    statement -> assignment
Rule 16    statement -> if_statement
Rule 17    statement -> while_statement
Rule 18    statement -> writeln_statement
Rule 19    assignment -> ID ASSIGN expression
Rule 20    if_statement -> IF expression THEN BEGIN statements END
Rule 21    if_statement -> IF expression THEN BEGIN statements END ELSE BEGIN statements END
Rule 22    while_statement -> WHILE expression DO BEGIN statements END
Rule 23    writeln_statement -> WRITELN LPAREN expression RPAREN
Rule 24    writeln_statement -> WRITELN LPAREN string_expression_list RPAREN
Rule 25    string_expression_list -> string_expression_list COMMA string_expression
Rule 26    string_expression_list -> string_expression
Rule 27    string_expression -> expression
Rule 28    string_expression -> STRING
Rule 29    expression -> simple_expression
Rule 30    expression -> simple_expression relop simple_expression
Rule 31    simple_expression -> term
Rule 32    simple_expression -> simple_expression addop term
Rule 33    term -> factor
Rule 34    term -> term mulop factor
Rule 35    factor -> LPAREN expression RPAREN
Rule 36    factor -> NUMBER
Rule 37    factor -> ID
Rule 38    addop -> PLUS
Rule 39    addop -> MINUS
Rule 40    mulop -> TIMES
Rule 41    mulop -> DIVIDE
Rule 42    relop -> LT
Rule 43    relop -> GT
Rule 44    relop -> EQ
Rule 45    relop -> LE
Rule 46    relop -> GE
Rule 47    expression -> expression AND expression

Terminals, with rules where they appear

AND                  : 47
ASSIGN               : 19
BEGIN                : 1 20 21 21 22
BOOLEAN              : 10
COLON                : 6
COMMA                : 7 25
DIVIDE               : 41
DO                   : 22
DOT                  : 1
ELSE                 : 21
END                  : 1 20 21 21 22
EQ                   : 44
GE                   : 46
GT                   : 43
ID                   : 1 7 8 19 37
IF                   : 20 21
INTEGER              : 9
LE                   : 45
LPAREN               : 23 24 35
LT                   : 42
MINUS                : 39
NUMBER               : 36
PLUS                 : 38
PROGRAM              : 1
RPAREN               : 23 24 35
SEMICOLON            : 1 6 11 12
STRING               : 28
THEN                 : 20 21
TIMES                : 40
VAR                  : 2
WHILE                : 22
WRITELN              : 23 24
error                : 

Nonterminals, with rules where they appear

addop                : 32
assignment           : 15
expression           : 19 20 21 22 23 27 35 47 47
factor               : 33 34
id_list              : 6 7
if_statement         : 16
mulop                : 34
program              : 0
relop                : 30
simple_expression    : 29 30 30 32
statement            : 11 12 13 14
statements           : 1 11 13 20 21 21 22
string_expression    : 25 26
string_expression_list : 24 25
term                 : 31 32 34
type                 : 6
var_declaration      : 4 5
var_declarations     : 1
var_list             : 2 4
while_statement      : 17
writeln_statement    : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON var_declarations BEGIN statements END DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON var_declarations BEGIN statements END DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON var_declarations BEGIN statements END DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . var_declarations BEGIN statements END DOT
    (2) var_declarations -> . VAR var_list
    (3) var_declarations -> .

    VAR             shift and go to state 6
    BEGIN           reduce using rule 3 (var_declarations -> .)

    var_declarations               shift and go to state 5

state 5

    (1) program -> PROGRAM ID SEMICOLON var_declarations . BEGIN statements END DOT

    BEGIN           shift and go to state 7


state 6

    (2) var_declarations -> VAR . var_list
    (4) var_list -> . var_list var_declaration
    (5) var_list -> . var_declaration
    (6) var_declaration -> . id_list COLON type SEMICOLON
    (7) id_list -> . id_list COMMA ID
    (8) id_list -> . ID

    ID              shift and go to state 11

    var_list                       shift and go to state 8
    var_declaration                shift and go to state 9
    id_list                        shift and go to state 10

state 7

    (1) program -> PROGRAM ID SEMICOLON var_declarations BEGIN . statements END DOT
    (11) statements -> . statements statement SEMICOLON
    (12) statements -> . statement SEMICOLON
    (13) statements -> . statements statement
    (14) statements -> . statement
    (15) statement -> . assignment
    (16) statement -> . if_statement
    (17) statement -> . while_statement
    (18) statement -> . writeln_statement
    (19) assignment -> . ID ASSIGN expression
    (20) if_statement -> . IF expression THEN BEGIN statements END
    (21) if_statement -> . IF expression THEN BEGIN statements END ELSE BEGIN statements END
    (22) while_statement -> . WHILE expression DO BEGIN statements END
    (23) writeln_statement -> . WRITELN LPAREN expression RPAREN
    (24) writeln_statement -> . WRITELN LPAREN string_expression_list RPAREN

    ID              shift and go to state 12
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    WRITELN         shift and go to state 21

    statements                     shift and go to state 13
    statement                      shift and go to state 14
    assignment                     shift and go to state 15
    if_statement                   shift and go to state 16
    while_statement                shift and go to state 17
    writeln_statement              shift and go to state 18

state 8

    (2) var_declarations -> VAR var_list .
    (4) var_list -> var_list . var_declaration
    (6) var_declaration -> . id_list COLON type SEMICOLON
    (7) id_list -> . id_list COMMA ID
    (8) id_list -> . ID

    BEGIN           reduce using rule 2 (var_declarations -> VAR var_list .)
    ID              shift and go to state 11

    var_declaration                shift and go to state 22
    id_list                        shift and go to state 10

state 9

    (5) var_list -> var_declaration .

    ID              reduce using rule 5 (var_list -> var_declaration .)
    BEGIN           reduce using rule 5 (var_list -> var_declaration .)


state 10

    (6) var_declaration -> id_list . COLON type SEMICOLON
    (7) id_list -> id_list . COMMA ID

    COLON           shift and go to state 23
    COMMA           shift and go to state 24


state 11

    (8) id_list -> ID .

    COLON           reduce using rule 8 (id_list -> ID .)
    COMMA           reduce using rule 8 (id_list -> ID .)


state 12

    (19) assignment -> ID . ASSIGN expression

    ASSIGN          shift and go to state 25


state 13

    (1) program -> PROGRAM ID SEMICOLON var_declarations BEGIN statements . END DOT
    (11) statements -> statements . statement SEMICOLON
    (13) statements -> statements . statement
    (15) statement -> . assignment
    (16) statement -> . if_statement
    (17) statement -> . while_statement
    (18) statement -> . writeln_statement
    (19) assignment -> . ID ASSIGN expression
    (20) if_statement -> . IF expression THEN BEGIN statements END
    (21) if_statement -> . IF expression THEN BEGIN statements END ELSE BEGIN statements END
    (22) while_statement -> . WHILE expression DO BEGIN statements END
    (23) writeln_statement -> . WRITELN LPAREN expression RPAREN
    (24) writeln_statement -> . WRITELN LPAREN string_expression_list RPAREN

    END             shift and go to state 26
    ID              shift and go to state 12
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    WRITELN         shift and go to state 21

    statement                      shift and go to state 27
    assignment                     shift and go to state 15
    if_statement                   shift and go to state 16
    while_statement                shift and go to state 17
    writeln_statement              shift and go to state 18

state 14

    (12) statements -> statement . SEMICOLON
    (14) statements -> statement .

    SEMICOLON       shift and go to state 28
    END             reduce using rule 14 (statements -> statement .)
    ID              reduce using rule 14 (statements -> statement .)
    IF              reduce using rule 14 (statements -> statement .)
    WHILE           reduce using rule 14 (statements -> statement .)
    WRITELN         reduce using rule 14 (statements -> statement .)


state 15

    (15) statement -> assignment .

    SEMICOLON       reduce using rule 15 (statement -> assignment .)
    END             reduce using rule 15 (statement -> assignment .)
    ID              reduce using rule 15 (statement -> assignment .)
    IF              reduce using rule 15 (statement -> assignment .)
    WHILE           reduce using rule 15 (statement -> assignment .)
    WRITELN         reduce using rule 15 (statement -> assignment .)


state 16

    (16) statement -> if_statement .

    SEMICOLON       reduce using rule 16 (statement -> if_statement .)
    END             reduce using rule 16 (statement -> if_statement .)
    ID              reduce using rule 16 (statement -> if_statement .)
    IF              reduce using rule 16 (statement -> if_statement .)
    WHILE           reduce using rule 16 (statement -> if_statement .)
    WRITELN         reduce using rule 16 (statement -> if_statement .)


state 17

    (17) statement -> while_statement .

    SEMICOLON       reduce using rule 17 (statement -> while_statement .)
    END             reduce using rule 17 (statement -> while_statement .)
    ID              reduce using rule 17 (statement -> while_statement .)
    IF              reduce using rule 17 (statement -> while_statement .)
    WHILE           reduce using rule 17 (statement -> while_statement .)
    WRITELN         reduce using rule 17 (statement -> while_statement .)


state 18

    (18) statement -> writeln_statement .

    SEMICOLON       reduce using rule 18 (statement -> writeln_statement .)
    END             reduce using rule 18 (statement -> writeln_statement .)
    ID              reduce using rule 18 (statement -> writeln_statement .)
    IF              reduce using rule 18 (statement -> writeln_statement .)
    WHILE           reduce using rule 18 (statement -> writeln_statement .)
    WRITELN         reduce using rule 18 (statement -> writeln_statement .)


state 19

    (20) if_statement -> IF . expression THEN BEGIN statements END
    (21) if_statement -> IF . expression THEN BEGIN statements END ELSE BEGIN statements END
    (29) expression -> . simple_expression
    (30) expression -> . simple_expression relop simple_expression
    (47) expression -> . expression AND expression
    (31) simple_expression -> . term
    (32) simple_expression -> . simple_expression addop term
    (33) term -> . factor
    (34) term -> . term mulop factor
    (35) factor -> . LPAREN expression RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . ID

    LPAREN          shift and go to state 33
    NUMBER          shift and go to state 34
    ID              shift and go to state 35

    expression                     shift and go to state 29
    simple_expression              shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32

state 20

    (22) while_statement -> WHILE . expression DO BEGIN statements END
    (29) expression -> . simple_expression
    (30) expression -> . simple_expression relop simple_expression
    (47) expression -> . expression AND expression
    (31) simple_expression -> . term
    (32) simple_expression -> . simple_expression addop term
    (33) term -> . factor
    (34) term -> . term mulop factor
    (35) factor -> . LPAREN expression RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . ID

    LPAREN          shift and go to state 33
    NUMBER          shift and go to state 34
    ID              shift and go to state 35

    expression                     shift and go to state 36
    simple_expression              shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32

state 21

    (23) writeln_statement -> WRITELN . LPAREN expression RPAREN
    (24) writeln_statement -> WRITELN . LPAREN string_expression_list RPAREN

    LPAREN          shift and go to state 37


state 22

    (4) var_list -> var_list var_declaration .

    ID              reduce using rule 4 (var_list -> var_list var_declaration .)
    BEGIN           reduce using rule 4 (var_list -> var_list var_declaration .)


state 23

    (6) var_declaration -> id_list COLON . type SEMICOLON
    (9) type -> . INTEGER
    (10) type -> . BOOLEAN

    INTEGER         shift and go to state 39
    BOOLEAN         shift and go to state 40

    type                           shift and go to state 38

state 24

    (7) id_list -> id_list COMMA . ID

    ID              shift and go to state 41


state 25

    (19) assignment -> ID ASSIGN . expression
    (29) expression -> . simple_expression
    (30) expression -> . simple_expression relop simple_expression
    (47) expression -> . expression AND expression
    (31) simple_expression -> . term
    (32) simple_expression -> . simple_expression addop term
    (33) term -> . factor
    (34) term -> . term mulop factor
    (35) factor -> . LPAREN expression RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . ID

    LPAREN          shift and go to state 33
    NUMBER          shift and go to state 34
    ID              shift and go to state 35

    expression                     shift and go to state 42
    simple_expression              shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32

state 26

    (1) program -> PROGRAM ID SEMICOLON var_declarations BEGIN statements END . DOT

    DOT             shift and go to state 43


state 27

    (11) statements -> statements statement . SEMICOLON
    (13) statements -> statements statement .

    SEMICOLON       shift and go to state 44
    END             reduce using rule 13 (statements -> statements statement .)
    ID              reduce using rule 13 (statements -> statements statement .)
    IF              reduce using rule 13 (statements -> statements statement .)
    WHILE           reduce using rule 13 (statements -> statements statement .)
    WRITELN         reduce using rule 13 (statements -> statements statement .)


state 28

    (12) statements -> statement SEMICOLON .

    END             reduce using rule 12 (statements -> statement SEMICOLON .)
    ID              reduce using rule 12 (statements -> statement SEMICOLON .)
    IF              reduce using rule 12 (statements -> statement SEMICOLON .)
    WHILE           reduce using rule 12 (statements -> statement SEMICOLON .)
    WRITELN         reduce using rule 12 (statements -> statement SEMICOLON .)


state 29

    (20) if_statement -> IF expression . THEN BEGIN statements END
    (21) if_statement -> IF expression . THEN BEGIN statements END ELSE BEGIN statements END
    (47) expression -> expression . AND expression

    THEN            shift and go to state 45
    AND             shift and go to state 46


state 30

    (29) expression -> simple_expression .
    (30) expression -> simple_expression . relop simple_expression
    (32) simple_expression -> simple_expression . addop term
    (42) relop -> . LT
    (43) relop -> . GT
    (44) relop -> . EQ
    (45) relop -> . LE
    (46) relop -> . GE
    (38) addop -> . PLUS
    (39) addop -> . MINUS

    THEN            reduce using rule 29 (expression -> simple_expression .)
    AND             reduce using rule 29 (expression -> simple_expression .)
    DO              reduce using rule 29 (expression -> simple_expression .)
    SEMICOLON       reduce using rule 29 (expression -> simple_expression .)
    END             reduce using rule 29 (expression -> simple_expression .)
    ID              reduce using rule 29 (expression -> simple_expression .)
    IF              reduce using rule 29 (expression -> simple_expression .)
    WHILE           reduce using rule 29 (expression -> simple_expression .)
    WRITELN         reduce using rule 29 (expression -> simple_expression .)
    RPAREN          reduce using rule 29 (expression -> simple_expression .)
    COMMA           reduce using rule 29 (expression -> simple_expression .)
    LT              shift and go to state 49
    GT              shift and go to state 50
    EQ              shift and go to state 51
    LE              shift and go to state 52
    GE              shift and go to state 53
    PLUS            shift and go to state 54
    MINUS           shift and go to state 55

    relop                          shift and go to state 47
    addop                          shift and go to state 48

state 31

    (31) simple_expression -> term .
    (34) term -> term . mulop factor
    (40) mulop -> . TIMES
    (41) mulop -> . DIVIDE

    LT              reduce using rule 31 (simple_expression -> term .)
    GT              reduce using rule 31 (simple_expression -> term .)
    EQ              reduce using rule 31 (simple_expression -> term .)
    LE              reduce using rule 31 (simple_expression -> term .)
    GE              reduce using rule 31 (simple_expression -> term .)
    PLUS            reduce using rule 31 (simple_expression -> term .)
    MINUS           reduce using rule 31 (simple_expression -> term .)
    THEN            reduce using rule 31 (simple_expression -> term .)
    AND             reduce using rule 31 (simple_expression -> term .)
    DO              reduce using rule 31 (simple_expression -> term .)
    SEMICOLON       reduce using rule 31 (simple_expression -> term .)
    END             reduce using rule 31 (simple_expression -> term .)
    ID              reduce using rule 31 (simple_expression -> term .)
    IF              reduce using rule 31 (simple_expression -> term .)
    WHILE           reduce using rule 31 (simple_expression -> term .)
    WRITELN         reduce using rule 31 (simple_expression -> term .)
    RPAREN          reduce using rule 31 (simple_expression -> term .)
    COMMA           reduce using rule 31 (simple_expression -> term .)
    TIMES           shift and go to state 57
    DIVIDE          shift and go to state 58

    mulop                          shift and go to state 56

state 32

    (33) term -> factor .

    TIMES           reduce using rule 33 (term -> factor .)
    DIVIDE          reduce using rule 33 (term -> factor .)
    LT              reduce using rule 33 (term -> factor .)
    GT              reduce using rule 33 (term -> factor .)
    EQ              reduce using rule 33 (term -> factor .)
    LE              reduce using rule 33 (term -> factor .)
    GE              reduce using rule 33 (term -> factor .)
    PLUS            reduce using rule 33 (term -> factor .)
    MINUS           reduce using rule 33 (term -> factor .)
    THEN            reduce using rule 33 (term -> factor .)
    AND             reduce using rule 33 (term -> factor .)
    DO              reduce using rule 33 (term -> factor .)
    SEMICOLON       reduce using rule 33 (term -> factor .)
    END             reduce using rule 33 (term -> factor .)
    ID              reduce using rule 33 (term -> factor .)
    IF              reduce using rule 33 (term -> factor .)
    WHILE           reduce using rule 33 (term -> factor .)
    WRITELN         reduce using rule 33 (term -> factor .)
    RPAREN          reduce using rule 33 (term -> factor .)
    COMMA           reduce using rule 33 (term -> factor .)


state 33

    (35) factor -> LPAREN . expression RPAREN
    (29) expression -> . simple_expression
    (30) expression -> . simple_expression relop simple_expression
    (47) expression -> . expression AND expression
    (31) simple_expression -> . term
    (32) simple_expression -> . simple_expression addop term
    (33) term -> . factor
    (34) term -> . term mulop factor
    (35) factor -> . LPAREN expression RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . ID

    LPAREN          shift and go to state 33
    NUMBER          shift and go to state 34
    ID              shift and go to state 35

    expression                     shift and go to state 59
    simple_expression              shift and go to state 30
    term                           shift and go to state 31
    factor                         shift and go to state 32

state 34

    (36) factor -> NUMBER .

    TIMES           reduce using rule 36 (factor -> NUMBER .)
    DIVIDE          reduce using rule 36 (factor -> NUMBER .)
    LT              reduce using rule 36 (factor -> NUMBER .)
    GT              reduce using rule 36 (factor -> NUMBER .)
    EQ              reduce using rule 36 (factor -> NUMBER .)
    LE              reduce using rule 36 (factor -> NUMBER .)
    GE              reduce using rule 36 (factor -> NUMBER .)
    PLUS            reduce using rule 36 (factor -> NUMBER .)
    MINUS           reduce using rule 36 (factor -> NUMBER .)
    THEN            reduce using rule 36 (factor -> NUMBER .)
    AND             reduce using rule 36 (factor -> NUMBER .)
    DO              reduce using rule 36 (factor -> NUMBER .)
    SEMICOLON       reduce using rule 36 (factor -> NUMBER .)
    END             reduce using rule 36 (factor -> NUMBER .)
    ID              reduce using rule 36 (factor -> NUMBER .)
    IF              reduce using rule 36 (factor -> NUMBER .)
    WHILE           reduce using rule 36 (factor -> NUMBER .)
    WRITELN         reduce using rule 36 (factor -> NUMBER .)
    RPAREN          reduce using rule 36 (factor -> NUMBER .)
    COMMA           reduce using rule 36 (factor -> NUMBER .)


state 35

    (37) factor -> ID .

    TIMES           reduce using rule 37 (factor -> ID .)
    DIVIDE          reduce using rule 37 (factor -> ID .)
    LT              reduce using rule 37 (factor -> ID .)
    GT              reduce using rule 37 (factor -> ID .)
    EQ              reduce using rule 37 (factor -> ID .)
    LE              reduce using rule 37 (factor -> ID .)
    GE              reduce using rule 37 (factor -> ID .)
    PLUS            reduce using rule 37 (factor -> ID .)
    MINUS           reduce using rule 37 (factor -> ID .)
    THEN            reduce using rule 37 (factor -> ID .)
    AND             reduce using rule 37 (factor -> ID .)
    DO              reduce using rule 37 (factor -> ID .)
    SEMICOLON       reduce using rule 37 (factor -> ID .)
    END             reduce using rule 37 (factor -> ID .)
    ID              reduce using rule 37 (factor -> ID .)
    IF              reduce using rule 37 (factor -> ID .)
    WHILE           reduce using rule 37 (factor -> ID .)
    WRITELN         reduce using rule 37 (factor -> ID .)
    RPAREN          reduce using rule 37 (factor -> ID .)
    COMMA           reduce using rule 37 (factor -> ID .)


state 36

    (22) while_statement -> WHILE expression . DO BEGIN statements END
    (47) expression -> expression . AND expression

    DO              shift and go to state 60
    AND             shift and go to state 46


state 37

    (23) writeln_statement -> WRITELN LPAREN . expression RPAREN
    (24) writeln_statement -> WRITELN LPAREN . string_expression_list RPAREN
    (29) expression -> . simple_expression
    (30) expression -> . simple_expression relop simple_expression
    (47) expression -> . expression AND expression
    (25) string_expression_list -> . string_expression_list COMMA string_expression
    (26) string_expression_list -> . string_expression
    (31) simple_expression -> . term
    (32) simple_expression -> . simple_expression addop term
    (27) string_expression -> . expression
    (28) string_expression -> . STRING
    (33) term -> . factor
    (34) term -> . term mulop factor
    (35) factor -> . LPAREN expression RPAREN
    (36) factor -> . NUMBER
    (37) factor -> . ID

    STRING          shift and go to state 64
    LPAREN          shift and go to state 33
    NUMBER          shift and go to state 34
    ID              shift and go to state 35

    expression                     shift and go to state 61
    string_expression_list         shift and go to state 62
    simple_expression              shift and go to state 30
    string_expression              shift and go to state 63
    term                           shift and go to state 31
    factor                         shift and go to state 32

state 38

    (6) var_declaration -> id_list COLON type . SEMICOLON

    SEMICOLON       shift and go to state 65


state 39

    (9) type -> INTEGER .

    SEMICOLON       reduce using rule 9 (type -> INTEGER .)


state 40

    (10) type -> BOOLEAN .

    SEMICOLON       reduce using rule 10 (type -> BOOLEAN .)


state 41

    (7) id_list -> id_list COMMA ID .

    COLON           reduce using rule 7 (id_list -> id_list COMMA ID .)
    COMMA           reduce using rule 7 (id_list -> id_list COMMA ID .)


state 42

    (19) assignment -> ID ASSIGN expression .
    (47) expression -> expression . AND expression

    SEMICOLON       reduce using rule 19 (assignment -> ID ASSIGN expression .)
    END             reduce using rule 19 (assignment -> ID ASSIGN expression .)
    ID              reduce using rule 19 (assignment -> ID ASSIGN expression .)
    IF              reduce using rule 19 (assignment -> ID ASSIGN expression .)
    WHILE           reduce using rule 19 (assignment -> ID ASSIGN expression .)
    WRITELN         reduce using rule 19 (assignment -> ID ASSIGN expression .)
    AND             shift and go to state 46


state 43

    (1) program -> PROGRAM ID SEMICOLON var_declarations BEGIN statements END DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON var_declarations BEGIN statements END DOT .)


state 44

    (11) statements -> statements statement SEMICOLON .

    END             reduce using rule 11 (statements -> statements statement SEMICOLON .)
    ID              reduce using rule 11 (statements -> statements statement SEMICOLON .)
    IF              reduce using rule 11 (statements -> statements statement SEMICOLON .)
    WHILE           reduce using rule 11 (statements -> statements statement SEMICOLON .)
    WRITELN         reduce using rule 11 (statements -> statements statement SEMICOLON .)

